--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,8 +14,9 @@ h2 {
   font-family: Arial;
 }
 
-div div h2 {
+div div h2:hover {
   cursor:pointer;
+  text-decoration: underline;
   /*font-size: 30px;
   box-shadow: 0 2px 2px #606060 ;
   border-radius: 10px;*/
@@ -32,6 +33,7 @@ div div h2:active {
 }
 #header a:hover {
 	color: black;
+  text-decoration: underline;
 }
 #header a {
 	color: white;
