change colors to IST official colors

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,7 +28,7 @@ div div h2:active {
 }
 
 #header {
-	background: #3984c5;
+	background: #009de0;
 	padding-bottom: 2px;
 }
 #header a:hover {
@@ -106,7 +106,7 @@ div #links a:hover {
 }
 
 .section h2 {
-	color: #3984c5;
+	color: #009de0;
 
 }
 
