--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,6 +9,7 @@ body {
 h1 {
   color: white;
 }
+
 h2 {
   font-family: Arial;
 }
@@ -21,21 +22,20 @@ h2 {
 
 .section:active {
   position: relative;
-  top: 0.5mm;
   display: inline-block;
 }
 
 #header {
-	background: #009de0;
-	padding-bottom: 2px;
+  background: #009de0;
+  padding-bottom: 2px;
 }
 #header a:hover {
-	color: black;
+  color: black;
   text-decoration: underline;
 }
 #header a {
-	color: white;
-	text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 #links {
@@ -49,7 +49,7 @@ h2 {
 }
 
 #links a {
-	color: #009de0;
+  color: #009de0;
 }
 
 #at_inner {
@@ -85,11 +85,11 @@ div #links a:hover {
 
 .section h2 {
   display: inline-block;
-	color: #808080;
-
+  color: #808080;
+  top: 5px;
 }
 
 .section {
   
-	border-radius: 10%;
+  border-radius: 10%;
 }
