--- a/Projeto/stylesheet.css
+++ b/Projeto/stylesheet.css
@@ -7,15 +7,8 @@ body {
 
 }
 
-table img {
-	height: 5em;
-	width: 5em;
-	border-radius: 5px;
-}
-
 table {
 	text-align: center;
-	
 	color: white; 
 }
 
@@ -30,11 +23,21 @@ table {
 }
 
 .icones {
-	padding: 2%;
+
 	border-style: solid;
 	border-width: 5px;
 	border-color: white;
 	border-radius: 25px;
+	text-align: center;
+
+}
+
+.imagem_icone {
+	height: 50%;
+	width: 50%;
+	border-radius: 5px;
+	text-align: center;
+	padding-top: 2%;
 }
 
 #home {
