--- a/Projeto/stylesheet.css
+++ b/Projeto/stylesheet.css
@@ -104,4 +104,36 @@ table {
 /*musica*/
 
 /*historico*/
+#historicotab {
+	/*max-height: 1%; */
+	max-width: 85%;
+	padding-top: 5%;
+	opacity: 0.65;
+}
+
+table#historicotab th	{
+    background-color: #333;
+    color: white;
+    height: 50%;
+}
+
+table#historicotab td {
+	background-color:white;
+	color:#333;
+}
+
+/* table#historicotab tr {
+	background-color:white;
+	color:#333;
+	margin-top: 100px;
+	margin-bottom: 100px;
+}
+*/
+
+
+#historico_par {
+	font-family: Arial;
+	font-size: 60px;
+	padding-left: 55%;
+}
 /*historico*/
