--- a/Projeto/stylesheet.css
+++ b/Projeto/stylesheet.css
@@ -75,9 +75,8 @@ table {
 }
 
 #img_reproducao {
-	width: 3%;
+	width: 4%;
 	padding-left: 3%;
-	padding-top: 0.2%;
 	float: left;
 }
 
@@ -119,8 +118,10 @@ table {
 /*musica*/
 
 /*historico*/
+#tabela{
+	max-height: 15%;
+}
 #historicotab {
-	/*max-height: 1%; */
 	max-width: 85%;
 	padding-top: 5%;
 	opacity: 0.65;
@@ -135,16 +136,8 @@ table#historicotab th	{
 table#historicotab td {
 	background-color:white;
 	color:#333;
+	height:30px;
 }
-
-/* table#historicotab tr {
-	background-color:white;
-	color:#333;
-	margin-top: 100px;
-	margin-bottom: 100px;
-}
-*/
-
 
 #historico_par {
 	font-family: Arial;
