--- a/Projeto/stylesheet.css
+++ b/Projeto/stylesheet.css
@@ -184,6 +184,18 @@ a {
 	padding-right: 1cm;
 }
 
+#beb {
+	background-color: #006df0;
+}
+
+#bebidas {
+	display: block;
+}
+
+#comida {
+	display: none;
+}
+
 .icones_bebidas {
 	border-style: solid;
 	border-width: 5px;
