--- a/Projeto/stylesheet.css
+++ b/Projeto/stylesheet.css
@@ -16,6 +16,7 @@ body {
 
 a {
 	text-decoration: none;
+	color: white;
 }
 #barra {
 	background-color: #333;
@@ -80,7 +81,7 @@ a {
 
 #pagamento {
 	float:left;
-	background-color: green;
+	background-color: #006df0;
 }
 
 #paga1 {
@@ -261,6 +262,82 @@ table#historicotab td {
 	color: white;
 }
 /*historico*/
+
+/*pagamento*/
+#ola {
+	float: left;
+}
+#tabela_pagamento{
+	overflow-y: scroll;
+	/*
+	
+	display: inline-block;*/
+	width: 50em;
+	margin-top: 4em;
+	height: 18em;
+	margin-left: 4em;
+
+}
+
+#historicotab {
+	width: 100%;
+	opacity: 0.75;
+	
+}
+
+table#historicotab th	{
+    background-color: #333;
+    color: white;
+    height: 50%;
+}
+
+table#historicotab td {
+	background-color:white;
+	color:#333;
+	padding: 0.7%;
+}
+
+.primeira_col {
+	text-align: center;
+}
+
+.terceira_col {
+	text-align: center;
+}
+
+#opcoes_pagamento {
+	float: right;
+	padding-right: 7em;
+	padding-top: 4em;
+	padding-bottom: 4em;
+	width: 25em;
+	height: 12.7cm;
+}
+
+.icones_pagamento {
+	border-style: solid;
+	border-width: 5px;
+	border-color: white;
+	border-radius: 25px;
+	padding: 1cm;
+	text-align: center;
+	background-color: #333;
+	opacity: 0.7;
+	color: white;
+	font-size: 200%;
+}
+/*
+#historico_par {
+	font-size: 60px;
+	padding-left: 8.5em;
+	padding-top: 5em;
+	color: white;
+	position: absolute;
+}
+
+
+}*/
+/*pagamento*/
 
 /*ajuda*/
 #voltar {
