--- a/Projeto/stylesheet.css
+++ b/Projeto/stylesheet.css
@@ -216,6 +216,7 @@ a {
 	padding-right: 2%;
 	border: 1px solid black;
 	color: white;
+	text-align: center;
 }
 
 .icones_bebidas {
@@ -350,7 +351,7 @@ table#historicotab td {
 #pay {
 	background-color: white;
 	margin-top: 1em;
-	margin-left: 45%;
+	margin:auto;
 	opacity: 0.7;
 	width: 5%;
 }
