--- a/Projeto/stylesheet.css
+++ b/Projeto/stylesheet.css
@@ -241,12 +241,20 @@ a {
 
 }
 
+#lista_produtos1 {
+	width: 100%;
+}
+
 #lista_produtos1 tr {
 	border-style: solid;
 	border-width: 5px;
 	border-color: white;
 	border-radius: 25px;
 	text-align: center;
+	color: #333;
+	font-size: 135%;
+	background-color: #eee;
+	opacity: 0.7;
 }
 
 .icones_lista {
