--- a/Projeto/stylesheet.css
+++ b/Projeto/stylesheet.css
@@ -213,8 +213,6 @@ a {
 
 #header_produtos {
 	width: 100%;
-	padding-right: 2%;
-	border: 1px solid black;
 	color: white;
 	text-align: center;
 }
@@ -359,7 +357,8 @@ table#historicotab td {
 #pay {
 	background-color: white;
 	margin-top: 1em;
-	margin:auto;
+	margin-left: auto;
+	margin-right: auto;
 	opacity: 0.7;
 	width: 5%;
 }
