add jquery function that haves remove option

--- a/Projeto/stylesheet.css
+++ b/Projeto/stylesheet.css
@@ -243,7 +243,7 @@ a {
 	width: 100%;
 }
 
-#lista_produtos1 tr {
+#lista_produtos1 tr { /*para a lista com javascript*/
 	border-style: solid;
 	border-width: 5px;
 	border-color: white;
@@ -254,6 +254,19 @@ a {
 	background-color: #eee;
 	opacity: 0.7;
 }
+
+/*#lista_produtos1 tr {/* /*para a lista com jquery*/
+	/*border-style: solid;
+	border-width: 5px;
+	border-color: white;
+	border-radius: 25px;
+	text-align: center;
+	color: #333;
+	font-size: 135%;
+	background-color: #eee;
+	opacity: 0.7;
+}*/
+
 
 .icones_lista {
 	border-style: solid;
