--- a/Projeto/stylesheet.css
+++ b/Projeto/stylesheet.css
@@ -298,6 +298,13 @@ a {
 #td_img {
 	width: 15%;
 }
+
+#add {
+	width: 15%;
+}
+#add img {
+	width: 30%;
+}
 /*menu*/
 
 /*musica*/
@@ -310,15 +317,17 @@ a {
 	width: 100%;
 	margin-right: auto;
 	margin-left: auto;
+	overflow-y: scroll;
+	height: 250px;
 }
 
-#tabela10 {
+/*#tabela10 {
 	overflow-y: scroll;
 	height: 250px;
 	max-width: 85%;
 	margin-right: auto;
 	margin-left: auto;
-}
+}*/
 
 #historicotab {
 	width: 100%;
@@ -326,17 +335,23 @@ a {
 	
 }
 
-#historicotab1 {
+/*#historicotab1 {
 	width: 100%;
 	opacity: 0.75;
-}
+}*/
 table#historicotab th	{
     background-color: #333;
     color: white;
     height: 50%;
 }
 
-table#historicotab1 td {
+/*table#historicotab1 td {
+	background-color:white;
+	color:#333;
+	padding: 0.7%;
+}*/
+
+table#historicotab td {
 	background-color:white;
 	color:#333;
 	padding: 0.7%;
