change cancelar and confirmar buttons, add alerts of the products missing to increase likes and some other stuff

--- a/Projeto/stylesheet.css
+++ b/Projeto/stylesheet.css
@@ -493,13 +493,13 @@ table#historicotab td {
 	width: 100%;
 }
 #confirmar{
-	background-color: green;
+	/*background-color: green;*/
 	width: 50%;
 	cursor: pointer;
 }
 
 #cancelar {
-	background-color: red;
+	/*background-color: red;*/
 	float:left;
 	margin-left: 10%;
 	width: 50%;
