pagamento button block if no orders have been made, alert of musica adicionada removed and minus and X buttons improved

--- a/Projeto/stylesheet.css
+++ b/Projeto/stylesheet.css
@@ -101,7 +101,11 @@ a {
 
 #pagamento {
 	float:left;
-	background-color: #006df0;
+	background-color: grey;
+}
+
+#pagamento:active {
+	cursor: pointer;
 }
 
 #paga1 {
