--- a/website/prototipo final beta/stylesheet.css
+++ b/website/prototipo final beta/stylesheet.css
@@ -101,7 +101,11 @@ a {
 
 #pagamento {
 	float:left;
-	background-color: #006df0;
+	background-color: grey;
+}
+
+#pagamento:active {
+	cursor: pointer;
 }
 
 #paga1 {
@@ -524,9 +528,6 @@ table#historicotab td {
   margin-bottom: 2%;
 }
 
-.list > li:active {
-	background-color: #bfbfbf;
-}
 .avatar {
   max-width: 150px;
 }
