phrase of number of likes on playlist working

--- a/Projeto/stylesheet.css
+++ b/Projeto/stylesheet.css
@@ -632,6 +632,13 @@ tr .artist {
 
 
 /*musica*/
+.phrase {
+    font-size: 25px;
+    color: #333;
+    float: right;
+    margin-right: 15%;
+}
+
 tr .time {
 	text-align: right;
 	width: 20%;
