--- a/Projeto/stylesheet.css
+++ b/Projeto/stylesheet.css
@@ -693,19 +693,19 @@ tr .artist {
 	position: fixed;
 	top: 0px;
 	left: 0px;
-	background: #FFF;
+	background: #333;
 	width: 100%;
 	z-index: 10;
 }
 #dialogbox{
 	display: none;
 	position: fixed;
-	background: #000;
-	border-radius:7px; 
+	background: #FFF;
+	border-radius:25px; 
 	width:550px;
 	z-index: 10;
 }
-#dialogbox > div{ background:#FFF; margin:8px; }
-#dialogbox > div > #dialogboxhead{ background: #666; font-size:19px; padding:10px; color:#CCC; }
-#dialogbox > div > #dialogboxbody{ background:#333; padding:20px; color:#FFF; }
-#dialogbox > div > #dialogboxfoot{ background: #666; padding:10px; text-align:right; }
+/*#dialogbox > div{ background:#FFF; margin:8px; }*/
+#dialogbox > div > #dialogboxhead{ background: #eee; font-size:19px; padding:10px; color:#006df0; border-top-left-radius: 18px;border-top-right-radius: 18px;}
+#dialogbox > div > #dialogboxbody{ background:#eee; padding:20px; color:#333; }
+#dialogbox > div > #dialogboxfoot{ background: #eee; padding:10px; text-align:right; border-bottom-left-radius: 18px;border-bottom-right-radius: 18px; }
