add due value to payment screen

--- a/Projeto/stylesheet.css
+++ b/Projeto/stylesheet.css
@@ -466,8 +466,14 @@ table#historicotab td {
 	width: 5%;
 }
 
+#total_aPagar {
+	margin-top:1.5em;
+	font-size: 60px;
+	color: #333;
 /*pagamento*/
 
+	text-align: center;
+}
 /*ajuda*/
 #voltar {
 	float:left;
