--- a/Projeto/stylesheet.css
+++ b/Projeto/stylesheet.css
@@ -108,6 +108,10 @@ a {
 	cursor: pointer;
 }
 
+#pagamento:hover {
+	cursor: pointer;
+}
+
 #paga1 {
 	font-size: 150%;
 	color: white;
@@ -241,8 +245,8 @@ a {
 	text-align: center;
 	background-color: #333;
 	opacity: 0.7;
-	cursor:pointer;
 }
+
 
 #lista_produtos {
 	width:100%;
@@ -434,6 +438,14 @@ table#historicotab td {
 	display: flex;
 	justify-content: space-between;
 	background-color: #333;
+}
+
+#repeatTable {
+	height: 100%;
+}
+
+#voltar:hover {
+	cursor: pointer;
 }
 /*historico*/
 
@@ -686,12 +698,7 @@ tr .artist {
 	font-size: 125%;
 }
 
-
-
 /*musica*/
-
-
-
 
 #dialogoverlay{
 	display: none;
@@ -715,3 +722,7 @@ tr .artist {
 #dialogbox > div > #dialogboxhead{ background: #eee; font-size:19px; padding:10px; color:#006df0; border-top-left-radius: 18px;border-top-right-radius: 18px;}
 #dialogbox > div > #dialogboxbody{ background:#eee; padding:20px; color:#333; }
 #dialogbox > div > #dialogboxfoot{ background: #eee; padding:10px; text-align:right; border-bottom-left-radius: 18px;border-bottom-right-radius: 18px; }
+
+button:hover {
+	cursor: pointer;
+}
